--- a/src/app/components/tasks/tasks.component.css
+++ b/src/app/components/tasks/tasks.component.css
@@ -6,9 +6,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background: #6190E8;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #A7BFE8, #6190E8);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #A7BFE8, #6190E8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #6190E8;
 }
 a, a:hover, a:focus {
     color: inherit;
@@ -185,7 +183,7 @@ a.article, a.article:hover {
     border: 1px grey solid;
     width: 1000px;
     margin-top: 70px;
-    margin-left: 200px;
+    margin-left: 350px;
     background-color: rgb(255, 217, 0);
     font-size: 20px;
 }
@@ -193,21 +191,20 @@ a.article, a.article:hover {
     border: 1px black solid;margin-left: 35px;width: 1420px;
 }
 .card1{
-    width: 89rem; min-height: 42rem;margin-left: 50px;margin-top: -40px;
-    background: #C9D6FF;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #E2E2E2, #C9D6FF);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #E2E2E2, #C9D6FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    width: 106.6em; min-height: 47.3rem;margin-left: 0px;margin-top: -70px;
+    background: #6190E8;
 }
 .date{
-    float: left;margin-left: 100px;
+    float: left;margin-left: 300px;margin-top:10px;
 }
 .com{
-    float: right;margin-left: 1050px;margin-top: -40px;
+    float: right;margin-left: 1150px;margin-top: -40px;
+}
+.details{
+    margin-left: 40px;
+    width: 900px;
 }
 @media (max-width: 330px) {
-    body{
-        width: 320px;
-    }
     .wrapper{
        min-width: 320px;
     }
@@ -216,7 +213,7 @@ background: linear-gradient(to right, #E2E2E2, #C9D6FF); /* W3C, IE 10+/ Edge, F
         width: 280px;
     }
     .card1{
-        width: 20rem; min-height: 40rem;margin-left: 0px;margin-top: 10px;
+        width: 20rem; min-height: 40rem;margin-left: 1px;margin-top: -70px;
     }
     .tname{
     width: 17rem;
@@ -230,7 +227,7 @@ background: linear-gradient(to right, #E2E2E2, #C9D6FF); /* W3C, IE 10+/ Edge, F
         margin-left: 100px;
     }
     .pfile{
-        padding-top: -50px;
+        margin-top: -50px;
         margin-left: 5px;
         width: 305px;
         font-size: 15px;
@@ -257,6 +254,10 @@ background: linear-gradient(to right, #E2E2E2, #C9D6FF); /* W3C, IE 10+/ Edge, F
     .com{
         font-size: 15px;
         margin-left: 90px;
+    }
+    .details{
+        margin-left: 10px;
+        width: 280px;
     }
 }
 
