--- a/src/app/components/addtask/addtask.component.css
+++ b/src/app/components/addtask/addtask.component.css
@@ -7,7 +7,6 @@
 body {
     font-family: 'Poppins', sans-serif;
     background: #6190E8;
-    min-height: 1050px;
 }
 a, a:hover, a:focus {
     color: inherit;
@@ -161,9 +160,9 @@ a.article, a.article:hover {
     margin-left: 40px;
     margin-top: 40px;
     width: 300px;border-color: white;
-    background: #6190E8;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #A7BFE8, #6190E8);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #A7BFE8, #6190E8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #ff4b1f;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #ff9068, #ff4b1f);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #ff9068, #ff4b1f); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .atname{
@@ -172,10 +171,8 @@ a.article, a.article:hover {
     text-align: center;
 }
 .card1{
-    width: 89rem; min-height: 42rem;margin-left: 10px;margin-top: -40px;
-    background: #C9D6FF;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #E2E2E2, #C9D6FF);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #E2E2E2, #C9D6FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
+    width: 105.5em; min-height: 47.5rem;margin-left: 0px;margin-top: -70px;
+    background: #6190E8;
 }
 .hname{
     text-align: center;margin-top: 20px;
@@ -244,6 +241,7 @@ a.article, a.article:hover {
     background-color: rgb(255, 217, 0);
 }
 .txt{
+    margin-left: -2px;
     width: 1100px;min-height: 250px;
 }
 .btn2{
@@ -251,31 +249,24 @@ a.article, a.article:hover {
     background-color: rgb(255, 217, 0);
 }
 .inp{
+    margin-left: -2px;
+    width: 302px;
     margin-top:2px;
 }
 @media (min-width: 1000px){
-    body{
-        position: relative;
-        min-width: 100%;
-        height: 60rem;
-    }
     .bbtn{
         margin-left: 1100px;
     }
     
 }
 @media (max-width: 330px) {
-    body{
-        min-width: 19.8em;
-        min-height: 950px;
-    }
     .card1{
-        width: 19rem; min-height: 40rem;margin-left: 6px;margin-top: -40px;
+        width: 20rem; min-height: 36.8rem;margin-left: 0px;margin-top: -70px;
     }
     .tname{
     width: 17rem;
     height: 3rem;
-    margin-left: 15px;
+    margin-left: 25px;
     margin-top: 10px;
     margin-bottom: 30px;
     background-color: rgb(255, 217, 0);
@@ -302,14 +293,14 @@ a.article, a.article:hover {
         width: 300px;
     }
     .btn2{
-        margin-left: 20px;
+        margin-left: 25px;
         background-color: rgb(255, 217, 0);
         width: 200px;
     }
     .txt{
-        width: 271px;
+        width: 274px;
     }
     .inp{
-        width: 271px;
+        width: 274px;
     }
 }
