--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -7,8 +7,6 @@
 body {
     font-family: 'Poppins', sans-serif;
     background: #6190E8;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #A7BFE8, #6190E8);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #A7BFE8, #6190E8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 a, a:hover, a:focus {
     color: inherit;
@@ -194,9 +192,7 @@ a.article, a.article:hover {
 }
 .card1{
     width: 89rem; min-height: 42rem;margin-left: 130px;margin-top: -40px;
-    background: #C9D6FF;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #E2E2E2, #C9D6FF);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #E2E2E2, #C9D6FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #C9D6FF;
 }
 @media (max-width: 330px) {
     .hrs{
