--- a/src/app/components/admindash/admindash.component.html
+++ b/src/app/components/admindash/admindash.component.html
@@ -13,7 +13,19 @@
             </div>
           </nav>
         <br><br><br>
-        <div class="card card1">
+        <div class="text-center">
+          <circle-progress *ngIf="loader"
+          [percent]="100"
+          [radius]="50"
+          [outerStrokeWidth]="8"
+          [innerStrokeWidth]="4"
+          [outerStrokeColor]="red"
+          innerStrokeColor="yellow"
+          [animation]="true"
+          [animationDuration]="10000"
+          ></circle-progress>
+        </div>
+        <div class="card card1" *ngIf="!loader">
             <h1 class="hname">LIST OF INTERNS</h1>
             <div *ngIf="users1.length === 0">
               <h3 class="hname">No interns registerd under you!!!</h3>
