--- a/src/app/components/adminlogin/adminlogin.component.html
+++ b/src/app/components/adminlogin/adminlogin.component.html
@@ -1,3 +1,4 @@
+<ngx-spinner></ngx-spinner>
 <body>
   <div class="alert">
     <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
