--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -13,7 +13,19 @@
             </div>
           </nav>
         <br><br><br>
-        <div class="card card1">
+        <div class="text-center">
+          <circle-progress *ngIf="loader"
+          [percent]="100"
+          [radius]="50"
+          [outerStrokeWidth]="8"
+          [innerStrokeWidth]="4"
+          [outerStrokeColor]="red"
+          innerStrokeColor="yellow"
+          [animation]="true"
+          [animationDuration]="10000"
+          ></circle-progress>
+        </div>
+        <div class="card card1" *ngIf="!loader">
             <h1 class="hname">YOUR INTERNSHIP TASKS</h1>
             <div style="margin-top: 70px;">
               <div *ngIf="tasks.length === 0">
