--- a/src/app/components/adminsignup/adminsignup.component.html
+++ b/src/app/components/adminsignup/adminsignup.component.html
@@ -10,7 +10,7 @@
         <form class="form" style="margin-top: -60px;">
           <div class="form-group">
             <label >ID Number</label>
-            <input type="text" name="regno" id="regno" [(ngModel)]="registerAdminData.regno" required>
+            <input type="number" name="regno" id="regno" [(ngModel)]="registerAdminData.regno" required>
           </div>
           <div class="form-group">
             <label >Name</label>
@@ -22,9 +22,9 @@
           </div>
           <div class="form-group">
             <label>Email</label>
-            <input type="email" name="email" id="email"  [(ngModel)]="registerAdminData.email" required>
+            <input type="email" name="email" id="email"  [(ngModel)]="registerAdminData.email" required type="email">
           </div>
-          <button type="button" (click)="registerAdmin()" class="btnsign">SIGNUP</button>
+          <button type="button" (click)="check()" class="btnsign">SIGNUP</button>
         </form>
         <br>
         <label class="nyr">Already Have Account?</label>
