--- a/src/app/components/admindash/admindash.component.css
+++ b/src/app/components/admindash/admindash.component.css
@@ -244,17 +244,20 @@ a.article, a.article:hover {
 }
 @media (min-width: 1000px){
     .bbtn{
-        margin-left: 1100px;
+        margin-left: 1200px;
     }
 }
-@media (max-width: 330px) {
+
+
+
+@media (max-width: 375px) {
     .card1{
-        width: 20rem; min-height: 36.8rem;margin-left: 0px;margin-top: -70px;
+        width: 23.5rem; min-height: 40rem;margin-left: 0px;margin-top: -70px;
     }
     .tname{
     width: 17rem;
     height: 3rem;
-    margin-left: -20px;
+    margin-left: 12px;
     margin-top: 10px;
     background-color: rgb(255, 217, 0);
     }
@@ -273,10 +276,172 @@ a.article, a.article:hover {
     }
     .btn{
         margin-left: -5px;
+        width: 360px;
+    }
+    .btn1{
+        margin-left: -5px;
+        width: 360px;
+    }
+}
+@media (max-width: 361px) {
+    .card1{
+        width: 360px; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left:8px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .btn{
+        margin-left: -5px;
+        width: 345px;
+    }
+    .btn1{
+        margin-left: -5px;
+        width: 345px;
+    }
+}
+
+@media (max-width: 351px) {
+    .card1{
+        width: 351px; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left:6px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .btn{
+        margin-left: -5px;
+        width: 330px;
+    }
+    .btn1{
+        margin-left: -5px;
+        width: 330px;
+    }
+}
+
+@media (max-width: 341px) {
+    .card1{
+        width: 341px; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left:-8px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .btn{
+        margin-left: -5px;
+        width: 320px;
+    }
+    .btn1{
+        margin-left: -5px;
+        width: 320px;
+    }
+}
+
+@media (max-width: 331px) {
+    .card1{
+        width: 20.5rem; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -10px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .btn{
+        margin-left: -5px;
         width: 300px;
     }
     .btn1{
         margin-left: -5px;
         width: 300px;
+    }
+}
+
+@media (max-width: 321px) {
+    .card1{
+        width: 20rem; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -15px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+}
+
+@media (max-width: 310px) {
+    .card1{
+        width: 310px; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -25px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+}
+
+@media (max-width: 300px) {
+    .card1{
+        width: 300px; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -25px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+}
+
+
+
+@media (max-width: 291px) {
+    .card1{
+        width: 290px; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -32px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .bbtn{
+        margin-left: -20px;
+        margin-bottom: 5px;
+    }
+}
+
+@media (max-width: 280px) {
+    .card1{
+        width: 280px; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+    }
+    .tname{
+    width: 16.8rem;
+    height: 3rem;
+    margin-left: -36.5px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .btn{
+        margin-left: -5px;
+        width: 290px;
+    }
+    .btn1{
+        margin-left: -5px;
+        width: 290px;
     }
 }
