--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -254,17 +254,18 @@ background: linear-gradient(to right, #ff9068, #ff4b1f); /* W3C, IE 10+/ Edge, F
 }
 @media (min-width: 1000px){
     .bbtn{
-        margin-left: 1100px;
+        margin-left: 1200px;
     }
 }
-@media (max-width: 330px) {
+
+@media (max-width: 375px) {
     .card1{
-        width: 20rem; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+        width: 375px; min-height: 40rem;margin-left: 0px;margin-top: -70px;
     }
     .tname{
     width: 17rem;
     height: 3rem;
-    margin-left: -20px;
+    margin-left: 12px;
     margin-top: 10px;
     background-color: rgb(255, 217, 0);
     }
@@ -283,10 +284,170 @@ background: linear-gradient(to right, #ff9068, #ff4b1f); /* W3C, IE 10+/ Edge, F
     }
     .btn{
         margin-left: -5px;
+        width: 360px;
+    }
+    .btn1{
+        margin-left: -5px;
+        width: 360px;
+    }
+}
+@media (max-width: 361px) {
+    .card1{
+        width: 360px; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left:8px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .btn{
+        margin-left: -5px;
+        width: 345px;
+    }
+    .btn1{
+        margin-left: -5px;
+        width: 345px;
+    }
+}
+
+@media (max-width: 351px) {
+    .card1{
+        width: 351px; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left:6px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .btn{
+        margin-left: -5px;
+        width: 330px;
+    }
+    .btn1{
+        margin-left: -5px;
+        width: 330px;
+    }
+}
+
+@media (max-width: 341px) {
+    .card1{
+        width: 341px; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left:-8px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .btn{
+        margin-left: -5px;
+        width: 320px;
+    }
+    .btn1{
+        margin-left: -5px;
+        width: 320px;
+    }
+}
+
+@media (max-width: 331px) {
+    .card1{
+        width: 330px; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -20px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .btn{
+        margin-left: -5px;
         width: 300px;
     }
     .btn1{
         margin-left: -5px;
         width: 300px;
+    }
+}
+
+@media (max-width: 321px) {
+    .card1{
+        width: 320px; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -15px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+}
+
+@media (max-width: 311px) {
+    .card1{
+        width: 311px; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -15px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+}
+
+@media (max-width: 300px) {
+    .card1{
+        width: 300px; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -25px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+}
+
+@media (max-width: 291px) {
+    .card1{
+        width: 290px; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -32px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .bbtn{
+        margin-left: -20px;
+        margin-bottom: 5px;
+    }
+}
+
+@media (max-width: 280px) {
+    .card1{
+        width: 220px; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -36.5px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .btn{
+        margin-left: -5px;
+        width: 290px;
+    }
+    .btn1{
+        margin-left: -5px;
+        width: 290px;
     }
 }
