--- a/src/app/components/tasks/tasks.component.css
+++ b/src/app/components/tasks/tasks.component.css
@@ -205,7 +205,108 @@ a.article, a.article:hover {
     margin-left: 40px;
     width: 900px;
 }
-@media (max-width: 330px) {
+
+
+
+.imgg{
+    margin-left: -20px;margin-top: -10px;
+}
+.nnaavv{
+    margin-top:-40px;
+}
+.navi{
+    margin-top:30px;
+    margin-bottom: -20px;
+}
+.navi1{
+    margin-top:20px;
+    margin-bottom: -20px;
+}
+.titles{
+    margin-top:30px;
+    margin-bottom: -20px;
+    width: 200px;
+}
+
+.btn{
+    background-color: rgb(255, 187, 0);
+    border-color: rgb(255, 187, 0);
+    font-size: 18px;
+}
+.btn1{
+    margin-left: 50px;
+    background-color: red;
+    border-color: red;
+}
+.bbtn{
+    margin-top:20px;
+    margin-bottom: -20px;
+}
+@media (min-width: 1000px){
+    .bbtn{
+        margin-left: 1200px;
+    }
+}
+
+
+@media (max-width: 375px) {
+    .wrapper{
+       min-width: 320px;
+    }
+    .hrs{
+        margin-left: -20px;
+        width: 280px;
+    }
+    .card1{
+        width: 20rem; min-height: 40rem;margin-left: -5px;margin-top: -70px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -20px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .atname{
+        margin-top: 10px;
+        margin-left: 100px;
+    }
+    .pfile{
+        margin-top: -50px;
+        margin-left: 5px;
+        width: 305px;
+        font-size: 15px;
+    }
+    .bbtn{
+        margin-left: -55px;
+        margin-bottom: 20px;
+    }
+    .btn{
+        font-size: 18px;
+        margin-left: 50px;
+    }
+    .btn1{
+        margin-left: -100px;
+        width: 300px;
+        margin-bottom: 20px;
+    }
+    .date{
+        font-size: 15px;
+        margin-top: 20px;
+        margin-left: 80px;
+        margin-bottom: 60px;
+    }
+    .com{
+        font-size: 15px;
+        margin-left: 90px;
+    }
+    .details{
+        margin-left: 10px;
+        width: 360px;
+    }
+}
+
+@media (max-width: 320px) {
     .wrapper{
        min-width: 320px;
     }
@@ -263,42 +364,418 @@ a.article, a.article:hover {
 }
 
 
-.imgg{
-    margin-left: -20px;margin-top: -10px;
-}
-.nnaavv{
-    margin-top:-40px;
-}
-.navi{
-    margin-top:30px;
-    margin-bottom: -20px;
-}
-.navi1{
-    margin-top:20px;
-    margin-bottom: -20px;
-}
-.titles{
-    margin-top:30px;
-    margin-bottom: -20px;
-    width: 200px;
+@media (max-width: 310px) {
+    .card1{
+        width: 19rem; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -25px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .pfile{
+        width: 305px;
+        margin-left: 0px;
+    }
 }
 
-.btn{
-    background-color: rgb(255, 187, 0);
-    border-color: rgb(255, 187, 0);
-    font-size: 18px;
+
+@media (max-width: 300px) {
+    .card1{
+        width: 19rem; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -25px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
 }
-.btn1{
-    margin-left: 50px;
-    background-color: red;
-    border-color: red;
-}
-.bbtn{
-    margin-top:20px;
-    margin-bottom: -20px;
-}
-@media (min-width: 1000px){
+
+@media (max-width: 290px) {
+    .card1{
+        width: 18.5rem; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -32px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
     .bbtn{
-        margin-left: 1100px;
+        margin-left: -20px;
+        margin-bottom: 5px;
+    }
+}
+
+@media (max-width: 280px) {
+    .wrapper{
+        width: 280px;
+    }
+    .card1{
+        width: 280px; min-height: 40rem;margin-left: 0px;margin-top: -70px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -36.5px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .btn{
+        margin-left: -5px;
+        width: 290px;
+    }
+    .btn1{
+        margin-left: -5px;
+        width: 290px;
+    }
+    .pfile{
+        width: 275px;
+        margin-left: 0px;
+    }
+    .nnaavv{
+        width: 18em;
+    }
+}
+
+
+
+
+
+@media (max-width: 376px) {
+    .hrs{
+        margin-left: -20px;
+        width: 280px;
+    }
+    .card1{
+        width: 375px; min-height: 40rem;margin-left: 0px;margin-top: 10px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -20px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .atname{
+        margin-top: 10px;
+        margin-left: 100px;
+    }
+    .pfile{
+        margin-left: 5px;
+        width: 365px;
+        font-size: 15px;
+    }
+    .bbtn{
+        margin-left: -55px;
+        margin-bottom: 20px;
+    }
+    .btn{
+        font-size: 18px;
+        margin-left: 50px;
+    }
+    .btn1{
+        margin-left: 50px;
+        width: 350px;
+        margin-bottom: 20px;
+    }
+}
+
+
+@media (max-width: 361px) {
+    .card1{
+        width: 360px; min-height: 40rem;margin-left: 0px;margin-top: 10px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -20px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .pfile{
+        margin-left: 5px;
+        width: 350px;
+        font-size: 15px;
+    }
+    .btn1{
+        margin-left: 50px;
+        width: 350px;
+        margin-bottom: 20px;
+    }
+    .bbtn{
+        margin-left: -60px;
+    }
+    .details{
+        margin-left: 7px;
+        width: 345px;
+    }
+}
+
+@media (max-width: 351px) {
+    .card1{
+        width: 350px; min-height: 40rem;margin-left: 0px;margin-top: 10px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -20px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .pfile{
+        margin-left: 5px;
+        width: 340px;
+        font-size: 15px;
+    }
+    .btn1{
+        margin-left: 50px;
+        width: 340px;
+        margin-bottom: 20px;
+    }
+    .details{
+        margin-left: 0px;
+        width: 330px;
+    }
+}
+@media (max-width: 341px) {
+    .card1{
+        width: 340px; min-height: 40rem;margin-left: -3px;margin-top: 10px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -20px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .pfile{
+        margin-left: 8px;
+        width: 330px;
+        font-size: 15px;
+    }
+    .btn1{
+        margin-left: 50px;
+        width: 330px;
+        margin-bottom: 20px;
+    }
+    .details{
+        margin-left: 5px;
+        width: 320px;
+    }
+}
+
+@media (max-width: 331px) {
+    .card1{
+        width: 330px; min-height: 40rem;margin-left: 0px;margin-top: 10px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -20px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .pfile{
+        margin-left: 5px;
+        width: 320px;
+        font-size: 15px;
+    }
+    .btn1{
+        margin-left: 50px;
+        width: 320px;
+        margin-bottom: 20px;
+    }
+    .details{
+        margin-left: 5px;
+        width: 320px;
+    }
+}
+
+@media (max-width: 321px) {
+    .hrs{
+        margin-left: -20px;
+        width: 280px;
+    }
+    .card1{
+        width: 20rem; min-height: 40rem;margin-left: 0px;margin-top: 10px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -20px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .atname{
+        margin-top: 10px;
+        margin-left: 100px;
+    }
+    .pfile{
+        margin-left: 5px;
+        width: 305px;
+        font-size: 15px;
+    }
+    .bbtn{
+        margin-left: -55px;
+        margin-bottom: 20px;
+    }
+    .btn{
+        font-size: 18px;
+        margin-left: 50px;
+    }
+    .btn1{
+        margin-left: 50px;
+        width: 300px;
+        margin-bottom: 20px;
+    }
+    .details{
+        margin-left: 3px;
+        width: 310px;
+    }
+}
+
+@media (max-width: 311px) {
+    .nnaavv{
+        width: 310px;
+    }
+    .card1{
+        width: 310px; min-height: 40rem;margin-left: 0px;margin-top: 10px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -20px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .pfile{
+        margin-left: 5px;
+        width: 300px;
+        font-size: 15px;
+    }
+    .btn1{
+        margin-left: 50px;
+        width: 300px;
+        margin-bottom: 20px;
+    }
+    .bbtn{
+        margin-left: -60px;
+        margin-bottom: 20px;
+    }
+    .details{
+        margin-left: 3px;
+        width: 300px;
+    }
+}
+
+@media (max-width: 301px) {
+    .nnaavv{
+        width: 300px;
+    }
+    .card1{
+        width: 300px; min-height: 40rem;margin-left: 0px;margin-top: 10px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -20px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .pfile{
+        margin-left: 5px;
+        width: 290px;
+        font-size: 15px;
+    }
+    .btn1{
+        margin-left: 50px;
+        width: 290px;
+        margin-bottom: 20px;
+    }
+    .bbtn{
+        margin-left: -60px;
+        margin-bottom: 20px;
+    }
+    .details{
+        margin-left: 3px;
+        width: 290px;
+    }
+}
+
+@media (max-width: 291px) {
+    .nnaavv{
+        width: 290px;
+    }
+    .card1{
+        width: 290px; min-height: 40rem;margin-left: 0px;margin-top: 10px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -20px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .pfile{
+        margin-left: 5px;
+        width: 280px;
+        font-size: 15px;
+    }
+    .btn1{
+        margin-left: 50px;
+        width: 280px;
+        margin-bottom: 20px;
+    }
+    .bbtn{
+        margin-left: -60px;
+        margin-bottom: 20px;
+    }
+    .details{
+        margin-left: 0px;
+        width: 280px;
+    }
+}
+
+
+@media (max-width: 281px) {
+    .nnaavv{
+        width: 280px;
+    }
+    .card1{
+        width: 280px; min-height: 40rem;margin-left: 0px;margin-top: 10px;
+    }
+    .tname{
+    width: 17rem;
+    height: 3rem;
+    margin-left: -20px;
+    margin-top: 10px;
+    background-color: rgb(255, 217, 0);
+    }
+    .pfile{
+        margin-left: 5px;
+        width: 270px;
+        font-size: 15px;
+    }
+    .btn1{
+        margin-left: 50px;
+        width: 270px;
+        margin-bottom: 20px;
+    }
+    .bbtn{
+        margin-left: -60px;
+        margin-bottom: 20px;
+    }
+    .btn{
+        width: 270px;
+    }
+    .details{
+        margin-left: 0px;
+        width: 270px;
     }
 }
