--- a/src/app/components/first/first.component.html
+++ b/src/app/components/first/first.component.html
@@ -28,7 +28,7 @@
         <div class="b2"> <a href="/adminlogin" class="btn animated-button thar-three bb2">Admin</a> </div>
       </div>
     </div>
-    <div class="animation-area" style="min-height: 1000;">
+    <div class="animation-area aa">
       <ul class="box-area">
         <li></li>
         <li></li>
