--- a/src/app/components/admindash/admindash.component.html
+++ b/src/app/components/admindash/admindash.component.html
@@ -19,7 +19,7 @@
           [radius]="50"
           [outerStrokeWidth]="8"
           [innerStrokeWidth]="4"
-          [outerStrokeColor]="red"
+          outerStrokeColor="red"
           innerStrokeColor="yellow"
           [animation]="true"
           [animationDuration]="10000"
