--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -20,7 +20,7 @@
           [radius]="50"
           [outerStrokeWidth]="8"
           [innerStrokeWidth]="4"
-          [outerStrokeColor]="red"
+          outerStrokeColor="red"
           innerStrokeColor="yellow"
           [animation]="true"
           [animationDuration]="10000"
